mobile fix pls work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=1000">
+    <meta name="viewport" content="width=1000, initial-scale=0.1">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
   href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
